# capnp_network_generator

./: .clang-format  .clang.tidy  .gitignore  CMakeLists.txt  CPP_GENERATION_GUIDE.md  README.md  Usage.md  main.cpp  network.dsl  style.md
include/: capnp_file_generator.hpp  cpp_enum_generator.hpp  cpp_factory_generator.hpp  cpp_header_files_generator.hpp  cpp_header_generator.hpp  cpp_message_base_generator.hpp  cpp_source_generator.hpp  generator.hpp  id_generator.hpp  lexer.hpp  mappings.hpp  message_base.hpp  schema.hpp  string_utils.hpp  type.hpp  type_converter.hpp
src/: capnp_file_generator.cpp  cpp_enum_generator.cpp  cpp_factory_generator.cpp  cpp_header_files_generator.cpp  cpp_header_generator.cpp  cpp_message_base_generator.cpp  cpp_source_generator.cpp  generator.cpp  id_generator.cpp  lexer.cpp  schema.cpp  string_utils.cpp  type.cpp  type_converter.cpp
